---------------------------------------------------------------------------------------------------
Version: 1.1.7
  Tweaks:
    - Increased mending wall and gate detection range to 60
    - Increased research costs of high explosive, incendiary, and bio researches by ~4x
    - Increased research costs of new turrets by ~2x
    - Increased research costs of new vehicles by ~2x to ~4x

---------------------------------------------------------------------------------------------------
Version: 1.1.6
  Compatibility:
    - Added bobs warfare pierce and plasma to mending and reinforced walls and gates
  Bugfixes:
    - Mod setting for disabling vehicles now works with Krastorio

---------------------------------------------------------------------------------------------------
Version: 1.1.5
  Bugfixes:
    - Fixed mushroom cloud and fixed better artillery sounds compatibility

---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 18. 02. 2022
  Contribution:
    - Locale for KO from x2605
  Tweaks:
    - Reduced advanced laser energy consumption by 55%
    - Increased advanced laser cooldown by 200%
    - Increased nuclear train consumption by 1000%
    - Increased advanced tank health by 1000 HP
    - Increased nuclear tank health by 2500 HP
    - Decreased nuclear tank consumption by 50%
    - Decreased advanced car consumption by 33%
    - Decreased nuclear car consumption by 33%
    - Increased nuclear train top speed by 10%
    - Changed license to GPLv3
  Bugfixes:
    - Fixed toxic launcher ammo not doing damage
    - Fixed Krastorio 2 overriding nuclear car and tank fuel type

---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 16. 01. 2022
  Bugfixes:
    - Fixed infinite technologies requiring 1 science pack for first level of infinite tech
